feat: Enhance HomePage and Programs components with new layouts and features
- Updated Footer component for improved styling.
- Refactored Header component with new dropdown items and hover effects.
- Introduced CarouselCard and CarouselLayout components for better carousel functionality.
- Modified Counter component for smoother animations and updated layout.
- Enhanced FlashNewsCard with hover effects and dynamic content.
- Updated FlashNewsLayout to display news details dynamically.
- Revamped KnowYourJourney component with detailed paths and improved UI.
- Added MarqueeContainer for showcasing partners.
- Created OurPride component to highlight achievements.
- Improved PathButton with hover effects and active state management.
- Introduced UpcomingEvent component as a placeholder for future events.
- Developed ProgramCard for displaying program details with hover effects.
- Added AnimatedButton for consistent button styling across the application.
- Enhanced GradientBanner and LetUsKnow components for better user interaction.
- Updated HomeBanner and ProgramsBanner for improved visuals and animations.
- Refactored CSS for better styling and added animations.
- Updated FlashNews page to reflect recent changes.
- Enhanced Programs page layout with new components.

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "lucide-react": "^0.544.0",
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-fast-marquee": "^1.6.5",
     "react-router": "^7.8.2",
     "tailwindcss": "^4.1.12"
   },
