--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
     "react-router": "^7.8.2",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
