Refactor pages to utilize NewPageLayout component for consistent styling and structure; update BoardOfDirectors, OurTeam, WhoWeAre, and ProgramOverview pages. Enhance HomePage with scroll navigation and responsive design. Implement TenderCard component in Tenders page for better organization of tender listings. Adjust OfficeSpaces and Startups pages for improved layout and spacing. Optimize imports and remove unused components across various pages.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.12",
@@ -22,6 +23,7 @@
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
     "react-router": "^7.8.2",
+    "react-swipeable": "^7.0.2",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.12"
