--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
+    "react-pdf": "^10.2.0",
     "react-router": "^7.8.2",
     "react-swipeable": "^7.0.2",
     "react-toastify": "^11.0.5",
